style: fixed footer alignment issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -111,8 +111,8 @@ a {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	position: absolute;
-	bottom: 2rem;
+	position: relative;
+	padding: 3rem 0 3rem 0;
 }
 
 button {
@@ -135,4 +135,11 @@ button:focus {
 	outline-style: solid;
 	outline-color: var(--primary);
 	transition-duration: 200ms;
+}
+
+@media (max-width: 600px) {
+	.footer-container {
+		flex-direction: column;
+		align-items: flex-start;
+	}
 }
